Feature: Service with queries - The user can now sort the selection by category or by city. Also, possible together. - Routes with a selection of categories and cities have been added.
