# app/Http/Controllers/API/v1/ServiceController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\API\v1;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Service\ServiceIndexRequest;
 use App\Http\Resources\Service\PublicServiceResource;
+use App\Repositories\Services\ServiceIndexDTO;
 use App\Services\Service\ServiceService;
 use Illuminate\Http\JsonResponse;
 use OpenApi\Attributes as OA;
@@ -16,7 +17,7 @@ class ServiceController extends Controller
      */
     public function __construct(
         protected ServiceService $serviceService,
-    ){
+    ) {
     }
 
     /**
@@ -26,7 +27,24 @@ class ServiceController extends Controller
     #[OA\Get(
         path: '/v1/all-services',
         tags: ['Service'],
-        parameters: [],
+        parameters: [
+            new OA\Parameter(
+                name: 'category',
+                in: 'query',
+                schema: new OA\Schema(
+                    type: 'string',
+                    maxLength: 255,
+                ),
+            ),
+            new OA\Parameter(
+                name: 'city',
+                in: 'query',
+                schema: new OA\Schema(
+                    type: 'string',
+                    maxLength: 255,
+                ),
+            ),
+        ],
         responses: [
             new OA\Response(
                 response: 200,
@@ -51,8 +69,9 @@ class ServiceController extends Controller
     )]
     public function index(ServiceIndexRequest $request): JsonResponse
     {
-//        $validated = $request->validated();
-        $service = $this->serviceService->getPublicServices();
+        $validated = $request->validated();
+        $DTO = new ServiceIndexDTO(...$validated);
+        $service = $this->serviceService->getPublicServices($DTO);
         $resource = PublicServiceResource::collection($service);
 
         return $resource->response()->setStatusCode(200);
