# routes/api.php
@@ -9,6 +9,8 @@ use App\Http\Controllers\API\v1\Authentication\EmailVerificationController;
 use App\Http\Controllers\API\v1\Authentication\PasswordController;
 use App\Http\Controllers\API\v1\HomePageController;
 use App\Http\Controllers\API\v1\ServiceController;
+use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\CityController;
 use App\Http\Middleware\API\GuestMiddleware;
 use App\Services\Swagger\SwaggerService;
 use Illuminate\Support\Facades\Route;
@@ -31,6 +33,8 @@ Route::get('swagger', function () {
 Route::group(['prefix' => 'v1'], function () {
     Route::get('/homepage', [HomePageController::class, 'index'])->name('home.page');
     Route::get('/all-services', [ServiceController::class, 'index'])->name('services.index');
+    Route::get('/cities', [CityController::class, 'index'])->name('cities.index');
+    Route::get('/categories', [CategoryController::class, 'index'])->name('cities.index');
     //TODO: Unit tests for auth services
     Route::get('/email-verify/{id}', [EmailVerificationController::class, 'verify'])
         ->name('verification.verify');
